cursor的功能性更新
